--- a/speechQuality/QualityNetPOLQA/load_polqa.ipynb
+++ b/speechQuality/QualityNetPOLQA/load_polqa.ipynb
@@ -195,6 +195,7 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
    "id": "6518aa7a74f5d0d0",
    "metadata": {
     "ExecuteTime": {
@@ -202,6 +203,7 @@
      "start_time": "2024-05-15T15:33:56.440492Z"
     }
    },
+   "outputs": [],
    "source": [
     "files = []\n",
     "with open(\"wav_train_se.list\", \"r\", encoding=\"utf-8\") as f:\n",
@@ -211,17 +213,65 @@
     "with open(\"wav_train_smini_se.list\", \"w\", encoding=\"utf-8\") as f:\n",
     "    for file in files[:200]:\n",
     "        f.write(file + \"\\n\")\n"
-   ],
-   "outputs": [],
-   "execution_count": 1
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": 4,
+   "id": "46767767857e8ff0",
+   "metadata": {},
    "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "46767767857e8ff0"
+   "source": [
+    "import random\n",
+    "with open(\"wav_polqa.list\", \"r\", encoding=\"utf-8\") as f:\n",
+    "    files = f.read().splitlines()\n",
+    "random.shuffle(files)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "305401d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "with open(\"wav_polqa_se.list\", \"w\", encoding=\"utf-8\") as f:\n",
+    "    for file in files:\n",
+    "        wav, score = file.split(\",\")\n",
+    "        clean_wav = os.path.join(r\"D:\\work\\speechEnhancement\\datasets\\dns_to_liang\", wav.split(\"\\\\\")[-1].split(\"_\")[0]+\"_target.wav\")\n",
+    "        f.write(wav+\",\"+clean_wav+\",\"+score+\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "89de8b32",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "with open(\"wav_polqa_se_mini.list\", \"w\", encoding=\"utf-8\") as f:\n",
+    "    for file in files[:2000]:\n",
+    "        wav, score = file.split(\",\")\n",
+    "        clean_wav = os.path.join(r\"D:\\work\\speechEnhancement\\datasets\\dns_to_liang\", wav.split(\"\\\\\")[-1].split(\"_\")[0]+\"_target.wav\")\n",
+    "        f.write(wav+\",\"+clean_wav+\",\"+score+\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "47c88cfb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "with open(\"wav_polqa_se_mid.list\", \"w\", encoding=\"utf-8\") as f:\n",
+    "    for file in files[:20000]:\n",
+    "        wav, score = file.split(\",\")\n",
+    "        clean_wav = os.path.join(r\"D:\\work\\speechEnhancement\\datasets\\dns_to_liang\", wav.split(\"\\\\\")[-1].split(\"_\")[0]+\"_target.wav\")\n",
+    "        f.write(wav+\",\"+clean_wav+\",\"+score+\"\\n\")"
+   ]
   }
  ],
  "metadata": {
