--- a/speechQuality/QualityNetPOLQA/test.ipynb
+++ b/speechQuality/QualityNetPOLQA/test.ipynb
@@ -10,8 +10,8 @@
     "import torch\n",
     "data = torch.randn([1, 25088])"
    ],
-   "execution_count": null,
-   "outputs": []
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
@@ -27,8 +27,8 @@
     "y2 = torch.concat([y2[:,:, :-1], y_, torch.zeros([1, 257, y1.shape[2]-y2.shape[2]])], dim=2)\n",
     "# y2 = torch.concat([y2, torch.zeros([1, 257, y1.shape[2]-y2.shape[2]])], dim=2)"
    ],
-   "execution_count": null,
-   "outputs": []
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
@@ -37,8 +37,8 @@
    "source": [
     "print(torch.sum(torch.abs(torch.abs(y1[:,:, 99]) - torch.abs(y2[:,:, 99]))))"
    ],
-   "execution_count": null,
-   "outputs": []
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
@@ -47,8 +47,8 @@
    "source": [
     "print(torch.sum(torch.abs(torch.abs(y1) - torch.abs(y2))))"
    ],
-   "execution_count": null,
-   "outputs": []
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
@@ -64,8 +64,8 @@
     "y2 = torch.concat([y2, y_, torch.zeros([1, 257, y1.shape[2]-y2.shape[2]-1])], dim=2)\n",
     "print(torch.sum(torch.abs(torch.abs(y1) - torch.abs(y2))))"
    ],
-   "execution_count": null,
-   "outputs": []
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
@@ -81,8 +81,8 @@
     "for i in progress(range(100)):\n",
     "    time.sleep(0.04)"
    ],
-   "execution_count": null,
-   "outputs": []
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
@@ -100,8 +100,8 @@
     "    for l in li_:\n",
     "        f.write(l+\"\\n\")\n"
    ],
-   "execution_count": null,
-   "outputs": []
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
@@ -125,8 +125,8 @@
     "        print(\"Early stopping\")\n",
     "        break"
    ],
-   "execution_count": null,
-   "outputs": []
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
@@ -138,8 +138,8 @@
     "\n",
     "polqa = [float(l.split(\",\")[1]) for l in li]\n"
    ],
-   "execution_count": null,
-   "outputs": []
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
@@ -161,8 +161,8 @@
     "plt.tight_layout()\n",
     "plt.savefig(\"images/MOS分数分布图.png\", dpi=dpi)"
    ],
-   "execution_count": null,
-   "outputs": []
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
@@ -174,8 +174,8 @@
     "\n",
     "polqa = [float(l.split(\",\")[1]) for l in li]"
    ],
-   "execution_count": null,
-   "outputs": []
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
@@ -190,8 +190,8 @@
     "    dis_num[idx] += 1\n",
     "print(dis_num)"
    ],
-   "execution_count": null,
-   "outputs": []
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
@@ -201,16 +201,11 @@
     "dis_prop = max(dis_num) / dis_num\n",
     "np.sqrt(dis_prop)"
    ],
-   "execution_count": null,
-   "outputs": []
+   "outputs": [],
+   "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-05-18T13:09:50.745830Z",
-     "start_time": "2024-05-18T13:09:49.979655Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "from trainer_utils import plot_metric\n",
@@ -221,8 +216,8 @@
     "                                  title=\"train and valid loss\")"
    ],
    "id": "9b14681c99d80cce",
-   "execution_count": 2,
-   "outputs": []
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -234,69 +229,84 @@
     "model.eval()\n"
    ],
    "id": "8304a2aa829097b7",
-   "execution_count": null,
-   "outputs": []
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-19T06:39:26.978627Z",
-     "start_time": "2024-05-19T06:37:38.793208Z"
+     "end_time": "2024-05-21T07:26:03.877028Z",
+     "start_time": "2024-05-21T07:26:03.869028Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "from trainer_utils import load_dataset_qn\n",
+    "from utils import seed_everything\n",
     "import torch\n",
+    "import random\n",
+    "import numpy as np\n",
     "\n",
-    "a, b, c = load_dataset_qn(\"wav_polqa_mini.list\", spilt_rate=[0.8, 0.1, 0.1], fft_size=512, hop_size=256)\n",
-    "print(a[0])\n",
-    "# loader = "
+    "seed_everything(42)"
    ],
-   "id": "99b36a1373a6ba13",
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[1], line 5\u001B[0m\n\u001B[0;32m      2\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mtorch\u001B[39;00m\n\u001B[0;32m      4\u001B[0m a, b, c \u001B[38;5;241m=\u001B[39m load_dataset_qn(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mwav_polqa_mini.list\u001B[39m\u001B[38;5;124m\"\u001B[39m, spilt_rate\u001B[38;5;241m=\u001B[39m[\u001B[38;5;241m0.8\u001B[39m, \u001B[38;5;241m0.1\u001B[39m, \u001B[38;5;241m0.1\u001B[39m], fft_size\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m512\u001B[39m, hop_size\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m256\u001B[39m)\n\u001B[1;32m----> 5\u001B[0m \u001B[38;5;28mprint\u001B[39m(\u001B[43ma\u001B[49m\u001B[43m[\u001B[49m\u001B[38;5;241;43m0\u001B[39;49m\u001B[43m]\u001B[49m)\n\u001B[0;32m      6\u001B[0m \u001B[38;5;66;03m# loader = \u001B[39;00m\n",
-      "File \u001B[1;32mD:\\work\\speechEnhancement\\speechQuality\\QualityNetPOLQA\\utils.py:50\u001B[0m, in \u001B[0;36mDNSPOLQADataset.__getitem__\u001B[1;34m(self, index)\u001B[0m\n\u001B[0;32m     48\u001B[0m noisy_LP, _ \u001B[38;5;241m=\u001B[39m Sp_and_phase(wav)\n\u001B[0;32m     49\u001B[0m noisy_LP \u001B[38;5;241m=\u001B[39m noisy_LP\u001B[38;5;241m.\u001B[39mto(device\u001B[38;5;241m=\u001B[39mdevice)\n\u001B[1;32m---> 50\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m noisy_LP, [polqa, polqa \u001B[38;5;241m*\u001B[39m torch\u001B[38;5;241m.\u001B[39mones([noisy_LP\u001B[38;5;241m.\u001B[39mshape[\u001B[38;5;241m0\u001B[39m]], dtype\u001B[38;5;241m=\u001B[39mtorch\u001B[38;5;241m.\u001B[39mfloat32, device\u001B[38;5;241m=\u001B[39mdevice)]\n",
-      "File \u001B[1;32m_pydevd_bundle\\\\pydevd_cython_win32_39_64.pyx:1187\u001B[0m, in \u001B[0;36m_pydevd_bundle.pydevd_cython_win32_39_64.SafeCallWrapper.__call__\u001B[1;34m()\u001B[0m\n",
-      "File \u001B[1;32m_pydevd_bundle\\\\pydevd_cython_win32_39_64.pyx:627\u001B[0m, in \u001B[0;36m_pydevd_bundle.pydevd_cython_win32_39_64.PyDBFrame.trace_dispatch\u001B[1;34m()\u001B[0m\n",
-      "File \u001B[1;32m_pydevd_bundle\\\\pydevd_cython_win32_39_64.pyx:1103\u001B[0m, in \u001B[0;36m_pydevd_bundle.pydevd_cython_win32_39_64.PyDBFrame.trace_dispatch\u001B[1;34m()\u001B[0m\n",
-      "File \u001B[1;32m_pydevd_bundle\\\\pydevd_cython_win32_39_64.pyx:1096\u001B[0m, in \u001B[0;36m_pydevd_bundle.pydevd_cython_win32_39_64.PyDBFrame.trace_dispatch\u001B[1;34m()\u001B[0m\n",
-      "File \u001B[1;32m_pydevd_bundle\\\\pydevd_cython_win32_39_64.pyx:585\u001B[0m, in \u001B[0;36m_pydevd_bundle.pydevd_cython_win32_39_64.PyDBFrame.do_wait_suspend\u001B[1;34m()\u001B[0m\n",
-      "File \u001B[1;32mD:\\PyCharm 2024.1\\plugins\\python\\helpers\\pydev\\pydevd.py:1185\u001B[0m, in \u001B[0;36mPyDB.do_wait_suspend\u001B[1;34m(self, thread, frame, event, arg, send_suspend_message, is_unhandled_exception)\u001B[0m\n\u001B[0;32m   1182\u001B[0m         from_this_thread\u001B[38;5;241m.\u001B[39mappend(frame_id)\n\u001B[0;32m   1184\u001B[0m \u001B[38;5;28;01mwith\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_threads_suspended_single_notification\u001B[38;5;241m.\u001B[39mnotify_thread_suspended(thread_id, stop_reason):\n\u001B[1;32m-> 1185\u001B[0m     \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43m_do_wait_suspend\u001B[49m\u001B[43m(\u001B[49m\u001B[43mthread\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mframe\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mevent\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43marg\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43msuspend_type\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mfrom_this_thread\u001B[49m\u001B[43m)\u001B[49m\n",
-      "File \u001B[1;32mD:\\PyCharm 2024.1\\plugins\\python\\helpers\\pydev\\pydevd.py:1200\u001B[0m, in \u001B[0;36mPyDB._do_wait_suspend\u001B[1;34m(self, thread, frame, event, arg, suspend_type, from_this_thread)\u001B[0m\n\u001B[0;32m   1197\u001B[0m             \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_call_mpl_hook()\n\u001B[0;32m   1199\u001B[0m         \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mprocess_internal_commands()\n\u001B[1;32m-> 1200\u001B[0m         \u001B[43mtime\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43msleep\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;241;43m0.01\u001B[39;49m\u001B[43m)\u001B[49m\n\u001B[0;32m   1202\u001B[0m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mcancel_async_evaluation(get_current_thread_id(thread), \u001B[38;5;28mstr\u001B[39m(\u001B[38;5;28mid\u001B[39m(frame)))\n\u001B[0;32m   1204\u001B[0m \u001B[38;5;66;03m# process any stepping instructions\u001B[39;00m\n",
-      "\u001B[1;31mKeyboardInterrupt\u001B[0m: "
-     ]
-    }
-   ],
-   "execution_count": 1
+   "id": "8ae5bdaa00eddbc3",
+   "outputs": [],
+   "execution_count": 22
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-18T14:27:49.308307Z",
-     "start_time": "2024-05-18T14:27:49.288311Z"
+     "end_time": "2024-05-21T07:26:07.351716Z",
+     "start_time": "2024-05-21T07:26:07.334716Z"
     }
    },
    "cell_type": "code",
-   "source": "\n",
-   "id": "9ab7ddb73c85e710",
-   "execution_count": 6,
-   "outputs": []
+   "source": [
+    "print(torch.randn((4, 8)))\n",
+    "print(np.random.rand(4, 8))"
+   ],
+   "id": "e947fa7290ab4819",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[-1.3847, -0.8712, -0.2234,  1.7174,  0.3189, -0.4245,  0.3057, -0.7746],\n",
+      "        [-1.5576,  0.9956, -0.8798, -0.6011, -1.2742,  2.1228, -1.2347, -0.4879],\n",
+      "        [-0.9138, -0.6581,  0.0780,  0.5258, -0.4880,  1.1914, -0.8140, -0.7360],\n",
+      "        [-1.4032,  0.0360, -0.0635,  0.6756, -0.0978,  1.8446, -1.1845,  1.3835]])\n",
+      "[[0.06505159 0.94888554 0.96563203 0.80839735 0.30461377 0.09767211\n",
+      "  0.68423303 0.44015249]\n",
+      " [0.12203823 0.49517691 0.03438852 0.9093204  0.25877998 0.66252228\n",
+      "  0.31171108 0.52006802]\n",
+      " [0.54671028 0.18485446 0.96958463 0.77513282 0.93949894 0.89482735\n",
+      "  0.59789998 0.92187424]\n",
+      " [0.0884925  0.19598286 0.04522729 0.32533033 0.38867729 0.27134903\n",
+      "  0.82873751 0.35675333]]\n"
+     ]
+    }
+   ],
+   "execution_count": 24
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-21T07:26:09.358216Z",
+     "start_time": "2024-05-21T07:26:09.344217Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "",
+   "id": "eac5ba5832b92314",
+   "outputs": [],
+   "execution_count": 24
   },
   {
    "metadata": {},
    "cell_type": "code",
+   "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "8ae5bdaa00eddbc3",
-   "outputs": []
+   "id": "4be447302c404c6a"
   }
  ],
  "metadata": {
