--- a/speechQuality/QualityNetPOLQA/test.ipynb
+++ b/speechQuality/QualityNetPOLQA/test.ipynb
@@ -310,9 +310,36 @@
     "    except StopIteration:\n",
     "        i_l = iter(l)\n",
     "        y = next(i_l)\n",
-    "    print(y)    "
+    "    print(y)"
    ],
    "outputs": []
+  },
+  {
+   "metadata": {
+    "jupyter": {
+     "is_executing": true
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from utils import get_logging\n",
+    "\n",
+    "logging = get_logging(\"log.txt\")\n",
+    "logging.info(\"hello\")\n",
+    "logging.info(\"hello\")\n",
+    "logging.info(\"hello\")"
+   ],
+   "id": "b1e3a2f779f26b4a",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "733c34b676a37dea"
   }
  ],
  "metadata": {
