--- a/speechQuality/QualityNetPOLQA/test.ipynb
+++ b/speechQuality/QualityNetPOLQA/test.ipynb
@@ -7,17 +7,18 @@
    "metadata": {
     "collapsed": true
    },
+   "outputs": [],
    "source": [
     "import torch\n",
     "data = torch.randn([1, 25088])"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "5c3c884d0072eb08",
    "metadata": {},
+   "outputs": [],
    "source": [
     "x1 = torch.concat([data, torch.zeros([1, 512])], dim=1)\n",
     "x2 = data\n",
@@ -27,34 +28,34 @@
     "y_ = torch.stft(torch.concat([x2[:, 24832:], torch.zeros([1, 256])], dim=1), 512, hop_length=256, return_complex=True, center=False)\n",
     "y2 = torch.concat([y2[:,:, :-1], y_, torch.zeros([1, 257, y1.shape[2]-y2.shape[2]])], dim=2)\n",
     "# y2 = torch.concat([y2, torch.zeros([1, 257, y1.shape[2]-y2.shape[2]])], dim=2)"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "c08a4fefcab4c9fd",
    "metadata": {},
+   "outputs": [],
    "source": [
     "print(torch.sum(torch.abs(torch.abs(y1[:,:, 99]) - torch.abs(y2[:,:, 99]))))"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "2cbf6bdb10170a07",
    "metadata": {},
+   "outputs": [],
    "source": [
     "print(torch.sum(torch.abs(torch.abs(y1) - torch.abs(y2))))"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "fcb83b2f6e640d00",
    "metadata": {},
+   "outputs": [],
    "source": [
     "x1 = torch.concat([data, torch.zeros([1, 512])], dim=1)\n",
     "x2 = data\n",
@@ -64,14 +65,14 @@
     "y_ = torch.stft(torch.concat([x2[:, 24832:], torch.zeros([1, 256])], dim=1), 512, hop_length=256, return_complex=True, center=False)\n",
     "y2 = torch.concat([y2, y_, torch.zeros([1, 257, y1.shape[2]-y2.shape[2]-1])], dim=2)\n",
     "print(torch.sum(torch.abs(torch.abs(y1) - torch.abs(y2))))"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "537a11ccfec2ea31",
    "metadata": {},
+   "outputs": [],
    "source": [
     "import time\n",
     "from progressbar import ProgressBar, Percentage, Bar, Timer, ETA\n",
@@ -81,14 +82,14 @@
     "progress = ProgressBar(widgets=widgets).start()\n",
     "for i in progress(range(100)):\n",
     "    time.sleep(0.04)"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "5a4b6c7d71f8275b",
    "metadata": {},
+   "outputs": [],
    "source": [
     "with open(\"wav_polqa.list\", \"r\", encoding=\"utf-8\") as f:\n",
     "    li = f.read().splitlines()\n",
@@ -100,14 +101,14 @@
     "with open(\"wav_polqa_big.list\", \"w\", encoding=\"utf-8\") as f:\n",
     "    for l in li_:\n",
     "        f.write(l+\"\\n\")\n"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "cc81537b1e2d416d",
    "metadata": {},
+   "outputs": [],
    "source": [
     "from trainer_utils import EarlyStopping, Args\n",
     "import time\n",
@@ -125,27 +126,27 @@
     "    if early_stopping(x):\n",
     "        print(\"Early stopping\")\n",
     "        break"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "5f85d943530a5ff1",
    "metadata": {},
+   "outputs": [],
    "source": [
     "with open(\"wav_polqa.list\", \"r\", encoding=\"utf-8\") as f:\n",
     "    li = f.read().splitlines()\n",
     "\n",
     "polqa = [float(l.split(\",\")[1]) for l in li]\n"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "e6668c165426048",
    "metadata": {},
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "from matplotlib import pyplot as plt\n",
@@ -161,27 +162,27 @@
     "plt.title(\"MOS分数分布\")\n",
     "plt.tight_layout()\n",
     "plt.savefig(\"images/MOS分数分布图.png\", dpi=dpi)"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "75cd5a2d9e3c88d",
    "metadata": {},
+   "outputs": [],
    "source": [
     "with open(\"wav_polqa.list\", \"r\", encoding=\"utf-8\") as f:\n",
     "    li = f.read().splitlines()\n",
     "\n",
     "polqa = [float(l.split(\",\")[1]) for l in li]"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "8cd2b0dd145c12ae",
    "metadata": {},
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "step = 20\n",
@@ -190,25 +191,25 @@
     "    idx = (int(p * 100) - 100) // step\n",
     "    dis_num[idx] += 1\n",
     "print(dis_num)"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "7f5d54615216cc0f",
    "metadata": {},
+   "outputs": [],
    "source": [
     "dis_prop = max(dis_num) / dis_num\n",
     "np.sqrt(dis_prop)"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "9b14681c99d80cce",
    "metadata": {},
+   "outputs": [],
    "source": [
     "from trainer_utils import plot_metric\n",
     "import numpy as np\n",
@@ -216,25 +217,24 @@
     "data = np.load(path, allow_pickle=True).item()\n",
     "plot_metric({\"train_loss\": data['train_loss'], \"valid_loss\": data[\"valid_loss\"]},\n",
     "                                  title=\"train and valid loss\")"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "8304a2aa829097b7",
    "metadata": {},
+   "outputs": [],
    "source": [
     "import torch\n",
     "\n",
     "model = torch.load(r\"D:\\work\\speechEnhancement\\speechQuality\\QualityNetPOLQA\\models\\dpcrn_qsehasa20240518_134721\\best.pt\")\n",
     "model.eval()\n"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "id": "8ae5bdaa00eddbc3",
    "metadata": {
     "ExecuteTime": {
@@ -242,6 +242,7 @@
      "start_time": "2024-05-21T07:26:03.869028Z"
     }
    },
+   "outputs": [],
    "source": [
     "from utils import seed_everything\n",
     "import torch\n",
@@ -249,8 +250,7 @@
     "import numpy as np\n",
     "\n",
     "seed_everything(42)"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
@@ -262,15 +262,15 @@
      "start_time": "2024-05-21T07:26:07.334716Z"
     }
    },
+   "outputs": [],
    "source": [
     "print(torch.randn((4, 8)))\n",
     "print(np.random.rand(4, 8))"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "id": "eac5ba5832b92314",
    "metadata": {
     "ExecuteTime": {
@@ -278,6 +278,7 @@
      "start_time": "2024-05-21T07:26:09.344217Z"
     }
    },
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import torch\n",
@@ -292,35 +293,76 @@
     "    \n",
     "    def __len__(self):\n",
     "        return len(self.x)"
-   ],
-   "outputs": []
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 38,
    "id": "4be447302c404c6a",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "tensor([0.0206, 0.9699, 0.8324, 0.2123], dtype=torch.float64)\n",
+      "tensor([0.0206, 0.9699, 0.8324, 0.2123], dtype=torch.float64)\n",
+      "tensor([0.0206, 0.9699, 0.8324, 0.2123], dtype=torch.float64)\n",
+      "tensor([0.0206, 0.9699, 0.8324, 0.2123], dtype=torch.float64)\n",
+      "tensor([0.0206, 0.9699, 0.8324, 0.2123], dtype=torch.float64)\n",
+      "tensor([0.0206, 0.9699, 0.8324, 0.2123], dtype=torch.float64)\n",
+      "tensor([0.0206, 0.9699, 0.8324, 0.2123], dtype=torch.float64)\n",
+      "tensor([0.0206, 0.9699, 0.8324, 0.2123], dtype=torch.float64)\n",
+      "tensor([0.0206, 0.9699, 0.8324, 0.2123], dtype=torch.float64)\n",
+      "tensor([0.0206, 0.9699, 0.8324, 0.2123], dtype=torch.float64)\n",
+      "tensor([0.0206, 0.9699, 0.8324, 0.2123], dtype=torch.float64)\n",
+      "tensor([0.0206, 0.9699, 0.8324, 0.2123], dtype=torch.float64)\n",
+      "tensor([0.0206, 0.9699, 0.8324, 0.2123], dtype=torch.float64)\n",
+      "tensor([0.0206, 0.9699, 0.8324, 0.2123], dtype=torch.float64)\n",
+      "tensor([0.0206, 0.9699, 0.8324, 0.2123], dtype=torch.float64)\n",
+      "tensor([0.0206, 0.9699, 0.8324, 0.2123], dtype=torch.float64)\n",
+      "tensor([0.0206, 0.9699, 0.8324, 0.2123], dtype=torch.float64)\n",
+      "tensor([0.0206, 0.9699, 0.8324, 0.2123], dtype=torch.float64)\n",
+      "tensor([0.0206, 0.9699, 0.8324, 0.2123], dtype=torch.float64)\n",
+      "tensor([0.0206, 0.9699, 0.8324, 0.2123], dtype=torch.float64)\n"
+     ]
+    }
+   ],
    "source": [
     "d = dataset(x=x)\n",
-    "l = DataLoader(d, batch_size=4, shuffle=True)\n",
-    "i_l = iter(l)\n",
+    "l = DataLoader(d, batch_size=4, shuffle=False)\n",
+    "print(len(l))\n",
+    "# i_l = iter(l)\n",
+    "# for i in range(20):\n",
+    "#     try:\n",
+    "#         y = next(i_l)\n",
+    "#     except StopIteration:\n",
+    "#         i_l = iter(l)\n",
+    "#         y = next(i_l)\n",
+    "#     print(y)\n",
+    "# from trainer_utils import LoaderIterator\n",
+    "\n",
+    "# i_l = LoaderIterator(l)\n",
+    "# for i in range(20):\n",
+    "#     print(i_l())\n",
+    "\n",
     "for i in range(20):\n",
-    "    try:\n",
-    "        y = next(i_l)\n",
-    "    except StopIteration:\n",
-    "        i_l = iter(l)\n",
-    "        y = next(i_l)\n",
-    "    print(y)"
-   ],
-   "outputs": []
+    "    for j in l:\n",
+    "        print(j)\n",
+    "        break"
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1e3a2f779f26b4a",
    "metadata": {
     "jupyter": {
      "is_executing": true
     }
    },
-   "cell_type": "code",
+   "outputs": [],
    "source": [
     "from utils import get_logging\n",
     "\n",
@@ -328,18 +370,15 @@
     "logging.info(\"hello\")\n",
     "logging.info(\"hello\")\n",
     "logging.info(\"hello\")"
-   ],
-   "id": "b1e3a2f779f26b4a",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
-   "source": "",
-   "id": "733c34b676a37dea"
+   "id": "733c34b676a37dea",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
