--- a/speechQuality/QualityNetPOLQA/test.ipynb
+++ b/speechQuality/QualityNetPOLQA/test.ipynb
@@ -300,35 +300,7 @@
    "execution_count": 38,
    "id": "4be447302c404c6a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n",
-      "tensor([0.0206, 0.9699, 0.8324, 0.2123], dtype=torch.float64)\n",
-      "tensor([0.0206, 0.9699, 0.8324, 0.2123], dtype=torch.float64)\n",
-      "tensor([0.0206, 0.9699, 0.8324, 0.2123], dtype=torch.float64)\n",
-      "tensor([0.0206, 0.9699, 0.8324, 0.2123], dtype=torch.float64)\n",
-      "tensor([0.0206, 0.9699, 0.8324, 0.2123], dtype=torch.float64)\n",
-      "tensor([0.0206, 0.9699, 0.8324, 0.2123], dtype=torch.float64)\n",
-      "tensor([0.0206, 0.9699, 0.8324, 0.2123], dtype=torch.float64)\n",
-      "tensor([0.0206, 0.9699, 0.8324, 0.2123], dtype=torch.float64)\n",
-      "tensor([0.0206, 0.9699, 0.8324, 0.2123], dtype=torch.float64)\n",
-      "tensor([0.0206, 0.9699, 0.8324, 0.2123], dtype=torch.float64)\n",
-      "tensor([0.0206, 0.9699, 0.8324, 0.2123], dtype=torch.float64)\n",
-      "tensor([0.0206, 0.9699, 0.8324, 0.2123], dtype=torch.float64)\n",
-      "tensor([0.0206, 0.9699, 0.8324, 0.2123], dtype=torch.float64)\n",
-      "tensor([0.0206, 0.9699, 0.8324, 0.2123], dtype=torch.float64)\n",
-      "tensor([0.0206, 0.9699, 0.8324, 0.2123], dtype=torch.float64)\n",
-      "tensor([0.0206, 0.9699, 0.8324, 0.2123], dtype=torch.float64)\n",
-      "tensor([0.0206, 0.9699, 0.8324, 0.2123], dtype=torch.float64)\n",
-      "tensor([0.0206, 0.9699, 0.8324, 0.2123], dtype=torch.float64)\n",
-      "tensor([0.0206, 0.9699, 0.8324, 0.2123], dtype=torch.float64)\n",
-      "tensor([0.0206, 0.9699, 0.8324, 0.2123], dtype=torch.float64)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "d = dataset(x=x)\n",
     "l = DataLoader(d, batch_size=4, shuffle=False)\n",
@@ -374,11 +346,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "733c34b676a37dea",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from torch.utils.tensorboard import SummaryWriter\n",
+    "import torch\n",
+    "summary = SummaryWriter(\"runs/temp\")\n",
+    "\n",
+    "from DPCRN import dpcrn\n",
+    "\n",
+    "x = torch.randn([4, 2, 128, 257])\n",
+    "model = dpcrn()\n",
+    "\n",
+    "summary.add_graph(model, x)"
+   ]
   }
  ],
  "metadata": {
