--- a/speechQuality/QualityNetPOLQA/load_polqa.ipynb
+++ b/speechQuality/QualityNetPOLQA/load_polqa.ipynb
@@ -271,6 +271,109 @@
     "        f.write(wav+\",\"+clean_wav+\",\"+score+\"\\n\")"
    ],
    "outputs": []
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-29T04:17:25.660834Z",
+     "start_time": "2024-05-29T04:17:25.578834Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "with open(\"wav_train_qn.list\", \"r\", encoding=\"utf-8\") as f:\n",
+    "    files = f.read().splitlines()\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "scores = []\n",
+    "\n",
+    "for file in files:\n",
+    "    scores.append(float(file.split(\",\")[-1]))\n",
+    "scores = np.array(scores)"
+   ],
+   "id": "d9ce8eb8f21bf7b5",
+   "outputs": [],
+   "execution_count": 2
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-29T04:32:30.172657Z",
+     "start_time": "2024-05-29T04:32:30.150658Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "begin = 1.0 - 1e-9\n",
+    "step = 0.5\n",
+    "scores_range = []\n",
+    "while begin < 5.0 - 1e-9:\n",
+    "    scores_range.append(np.argwhere((scores > begin) & (scores < begin + step)))\n",
+    "    begin += step"
+   ],
+   "id": "d226d867c177a1f5",
+   "outputs": [],
+   "execution_count": 5
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-29T04:40:39.375089Z",
+     "start_time": "2024-05-29T04:40:39.343090Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "sample_num = 6000\n",
+    "import random\n",
+    "samples = []\n",
+    "for i in range(len(scores_range)):\n",
+    "    srange = list(scores_range[i].squeeze(-1))\n",
+    "    if len(srange) < sample_num:\n",
+    "        samples.extend(srange)\n",
+    "    else:\n",
+    "        samples.extend(random.sample(srange, sample_num))\n",
+    "\n",
+    "print(len(samples))"
+   ],
+   "id": "685fe35769997eb6",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "36860\n"
+     ]
+    }
+   ],
+   "execution_count": 8
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-29T04:43:37.737204Z",
+     "start_time": "2024-05-29T04:43:37.689208Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "random.shuffle(samples)\n",
+    "with open(\"wav_train_qn_rs.list\", \"w\", encoding=\"utf-8\") as f:\n",
+    "    for i in samples:\n",
+    "        f.write(files[i] + \"\\n\")"
+   ],
+   "id": "512e01afa3f42706",
+   "outputs": [],
+   "execution_count": 11
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "85bcbd42b5427361"
   }
  ],
  "metadata": {
